k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: booking-engine
    component: backend
spec:
  type: ClusterIP
  selector:
    app: booking-engine
    component: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
