k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: booking-engine
    component: database
spec:
  type: ClusterIP
  selector:
    app: booking-engine
    component: database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
